fix scrollbar

--- a/frontend/todo-app/src/components/todo/search.scss
+++ b/frontend/todo-app/src/components/todo/search.scss
@@ -25,7 +25,7 @@
         margin-top: -2px;
         border-radius: 0px 0px 10px 10px;
         font-size: .8em;
-        overflow: scroll;
+        overflow-y: scroll;
         max-height: 184px;
 
         & a {
